--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^3.3.7
   firebase_core: ^1.12.0
   fluttertoast: ^8.0.8
+  table_calendar: ^3.0.5
 
 dev_dependencies:
   flutter_test:
